fix: Online Event Sidebar Align text and buttons (#6522)

--- a/app/styles/components/stream.scss
+++ b/app/styles/components/stream.scss
@@ -46,7 +46,7 @@
 }
 
 .stream-side-panel {
-  width: 300px;
+  width: 320px;
   height: 100%;
   position: fixed;
   top: 0;
