--- a/app/styles/partials/utils.scss
+++ b/app/styles/partials/utils.scss
@@ -65,8 +65,16 @@
   padding-top: 0 !important;
 }
 
+.pt-2 {
+  padding-top: .5rem !important;
+}
+
 .pt-4 {
   padding-top: 1rem !important;
+}
+
+.pr-01 {
+  padding-right: .1rem !important;
 }
 
 .pr-1 {
@@ -77,8 +85,16 @@
   padding-right: .5rem !important;
 }
 
+.pb-2 {
+  padding-bottom: .5rem !important;
+}
+
 .pb-4 {
   padding-bottom: 1rem !important;
+}
+
+.pl-01 {
+  padding-left: .1rem !important;
 }
 
 .pl-2 {
